# notes-app

./: .gitignore
rust_server/: Cargo.toml
rust_server/src/: main.rs
server/: .gitignore  dump.rdb  package-lock.json  package.json
server/src/: index.ts  types.ts
server/src/entities/: Note.ts  User.ts
server/src/resolvers/: note.ts  user.ts
web/: .env  .gitignore  package.json  tsconfig.json
web/src/components/: InputField.tsx  Navbar.tsx  Wrapper.tsx
web/src/components/styles/: InputField.module.css  Navbar.module.css  Wrapper.module.css
web/src/graphql/fragments/: BaseUser.graphql  FieldError.graphql  FullUser.graphql
web/src/graphql/mutations/: login.graphql  register.graphql
web/src/graphql/queries/: currentUser.graphql
web/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
web/src/styles/: globals.css
web/src/utils/: createUrqlClient.ts  formikErrorMap.ts  updateQueryWrapper.ts
