[package]
name = "rust_server"
version = "0.1.0"
authors = ["Wyatt Lake <wattttte@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
env_logger = "0.8.2"
juniper = "0.15.2"
syn = "=1.0.59"